correction load de form quand clé multiple

--- a/kairos-ui/kairos-ui/TelosysTools/templates/typesscript-angular4-rest-frontend/src/app/entities/Entity_form/ENTITY-form_component_ts.vm
+++ b/kairos-ui/kairos-ui/TelosysTools/templates/typesscript-angular4-rest-frontend/src/app/entities/Entity_form/ENTITY-form_component_ts.vm
@@ -205,7 +205,16 @@ export class $formComponentName extends Lov implements OnInit {
 
 
   load = () => {
-    this.${_entityService}.get(this.ids).subscribe(
+	// Concaténer les ids mais séparé par / et non ,
+	var param : String = '';
+	
+	for (var i=0;i<this.ids.length;i++) {
+		param = param + this.ids[i];
+		if (i != (this.ids.length-1)) {
+			param = param + '/';
+		}
+	}
+    this.${_entityService}.get(param).subscribe(
       ($LCentityName: ${entity.name}) => {
 #set ($entityObjectMapping = "")
 #foreach ( $attrib in $entity.attributes)
