la dropdown marche mais bon sang que c'est compliqué pour pas grand chose : à expliquer

--- a/kairos-ui/kairos-ui/src/app/app.component.html
+++ b/kairos-ui/kairos-ui/src/app/app.component.html
@@ -2,7 +2,7 @@
 
     <app-menu></app-menu> 
 
-    <app-topbar [listOfConsultants]="listOfConsultants"></app-topbar>
+    <app-topbar [listOfConsultants]="listOfConsultants_itm"></app-topbar>
  
     <div class="layout-main">
         <div class="layout-content">
