--- a/kairos-ui/kairos-ui/src/app/about/about.component.html
+++ b/kairos-ui/kairos-ui/src/app/about/about.component.html
@@ -2,6 +2,9 @@
 <p></p>
 <p></p>
 <p-card header="{{ title }}" [style]="{width: '700px'}">
+	<p-dropdown [options]="cities1" [(ngModel)]="selectedCity1"></p-dropdown>
+	<p-dropdown [options]="cities2" [(ngModel)]="selectedCity2" optionLabel="name"></p-dropdown>
+
     <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sed consequuntur error repudiandae numquam deserunt
         quisquam repellat libero asperiores earum nam nobis, culpa ratione quam perferendis esse, cupiditate neque quas!</div>
 </p-card>
