--- a/kairos-ui/kairos-ui/src/app/about/about.component.html
+++ b/kairos-ui/kairos-ui/src/app/about/about.component.html
@@ -4,6 +4,7 @@
 <p-card header="{{ title }}" [style]="{width: '700px'}">
 	<p-dropdown [options]="cities1" [(ngModel)]="selectedCity1"></p-dropdown>
 	<p-dropdown [options]="cities2" [(ngModel)]="selectedCity2" optionLabel="name"></p-dropdown>
+	<p-dropdown [options]="cities3" [(ngModel)]="selectedCity3"></p-dropdown>
 
     <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sed consequuntur error repudiandae numquam deserunt
         quisquam repellat libero asperiores earum nam nobis, culpa ratione quam perferendis esse, cupiditate neque quas!</div>
