avant refonte du layout

--- a/kairos-ui/kairos-ui/src/app/app.component.html
+++ b/kairos-ui/kairos-ui/src/app/app.component.html
@@ -8,9 +8,8 @@
         <div class="layout-content">
             <router-outlet></router-outlet>
         </div>
-
+		<simple-notifications [options]="optionsForNotifications"></simple-notifications>
         <app-footer></app-footer> 
- 
         <div class="layout-main-mask"></div> 
     </div> 
 
