avant tentative correction sidebar

--- a/kairos-ui/kairos-ui/src/app/app.component.html
+++ b/kairos-ui/kairos-ui/src/app/app.component.html
@@ -5,8 +5,12 @@
     </div>
 </div>
 <div class="p-grid">
-	<div class="p-col layout-sidebar" [ngClass]="{'layout-sidebar-active': sidebarActive}">
-		<app-menu></app-menu> 
+	<div class="p-col">
+	    <div class="layout-main">
+	    	<div class="layout-content">
+					Hello World
+	        </div>
+	    </div>
 	</div>
 	<div class="p-col">
 	    <div class="layout-main">
