--- a/kairos-ui/kairos-ui/src/app/app.component.html
+++ b/kairos-ui/kairos-ui/src/app/app.component.html
@@ -5,13 +5,9 @@
     </div>
 </div>
 <div class="p-grid">
-	<div class="p-col">
-	    <div class="layout-main">
-	    	<div class="layout-content">
-					Hello World
-	        </div>
-	    </div>
-	</div>
+	<div class="p-col-fixed" style="width:240px">
+		<app-menu></app-menu>
+   	</div>	
 	<div class="p-col">
 	    <div class="layout-main">
 	        <div class="layout-content">
@@ -22,7 +18,7 @@
     	</div> 
 	</div>
 </div>
-<div class="p-grid layout-main layout-footer p-align-end ">
+<div class="p-grid layout-main p-align-end ">
     <div class="p-col">
         <app-footer></app-footer> 
     </div>
