avant refactory form menu

--- a/kairos-ui/kairos-ui/src/app/app.component.html
+++ b/kairos-ui/kairos-ui/src/app/app.component.html
@@ -18,7 +18,7 @@
     	</div> 
 	</div>
 </div>
-<div class="p-grid layout-main p-align-end ">
+<div class="p-grid layout-main">
     <div class="p-col">
         <app-footer></app-footer> 
     </div>
