--- a/kairos-ui/kairos-ui/src/app/login/login.component.html
+++ b/kairos-ui/kairos-ui/src/app/login/login.component.html
@@ -1,28 +1,17 @@
 <div class="basic-container">
-<mat-card  class="login-card">
-    <form [formGroup]="form" novalidate (ngSubmit)="login()" autocomplete="on">
-  	<mat-card-header>
-      	<mat-card-title>Page de Connection</mat-card-title>
-        <mat-card-subtitle>{{message}}</mat-card-subtitle>
-  	</mat-card-header>
-    <mat-card-content class="login-container">
-          <mat-divider></mat-divider>
-          <mat-grid-list cols="1" rowHeight="70px">
-            <mat-grid-tile [colspan]="1" [rowspan]="1">
-              <mat-form-field class="form-full-width">
-                <input matInput placeholder="Utilisateur" required formControlName="name"  autocomplete="username">
-              </mat-form-field>
-            </mat-grid-tile>
-            <mat-grid-tile [colspan]="1" [rowspan]="1">
-              <mat-form-field class="form-full-width">
-                <input matInput placeholder="Mot de passe" type="password" autocomplete="current-password" required formControlName="password">
-              </mat-form-field>
-            </mat-grid-tile>
-          </mat-grid-list>
-    </mat-card-content>
-    <mat-card-actions>
-      <button mat-raised-button type="submit" color="primary">Se connecter</button>
-    </mat-card-actions>
-    </form>
-</mat-card>
+<form [formGroup]="form" novalidate (ngSubmit)="login()" autocomplete="on">
+<p-card header="Page de Connection" subheader="{{message}}" [style]="{width: '340px'}">
+	<table>
+		<tr><td>
+    		<input pInputText placeholder="Utilisateur" required formControlName="name" autocomplete="username">
+		</td></tr>
+		<tr><td>
+    		<input pInputText placeholder="Mot de passe" type="password" autocomplete="current-password" required formControlName="password">
+		</td></tr>
+	</table>
+    <p-footer>
+      <button pButton type="submit" color="primary">Se connecter</button>
+    </p-footer>
+</p-card>
+</form>
 </div>
