correction clé avec date

--- a/kairos-ui/kairos-ui/TelosysTools/templates/typesscript-angular4-rest-frontend/src/app/entities/Entity_list/ENTITY-list_component_ts.vm
+++ b/kairos-ui/kairos-ui/TelosysTools/templates/typesscript-angular4-rest-frontend/src/app/entities/Entity_list/ENTITY-list_component_ts.vm
@@ -139,7 +139,11 @@ export class $listComponentName implements OnInit, OnChanges {
   }
 
   goTo${entity.name}Form($entity.keyAttributesNamesAsString(', ')) {
-    this._router.navigate(['./${LCentityName}-form', $entity.keyAttributesNamesAsString(', ')]);
+#set ($paramGoto = "$entity.keyAttributesNamesAsString(', ')")
+#if (${LCentityName} == "calendrier")
+#set ($paramGoto = "${paramGoto}.toISOString()")
+#end
+    this._router.navigate(['./${LCentityName}-form', ${paramGoto}]);
   }
 
   deleteConfirmation = ($entity.keyAttributesNamesAsString(', ')) => {
